Activate comboboxes (i.e. open dropdown menu) on Enter and Space.

Note that pressing space while the menu is open does nothing. This matches html <select> behavior. Pressing Enter while the menu is open selects the highlighted option and closes the menu. This also matches <select>.

BUG=616685

Review-Url: https://codereview.chromium.org/2299023003
Cr-Commit-Position: refs/heads/master@{#416051}

Former-commit-id: 6f4a390626d934c6473e3023788968b87f8186d9